--- a/app.properties
+++ b/app.properties
@@ -1,2 +1,2 @@
-frontend.url = https://taydrey.github.io/ui-cov19-estimator/
+frontend.url = https://taydrey.github.io/ui-cov19-estimator
 backend.rest = https://jsonplaceholder.typicode.com/todos
